[package]
name = "mlm"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "Generates random text based on the statistical properties of a given source text. It implements an n-gram Markov Language Model using n-uplets to predict word sequences"
readme = "README.md"
repository = "https://github.com/c2fc2f/Markov-Language-Model"
license = "MIT"
keywords = [
  "markov", 
  "language-model", 
]
categories = [
  "command-line-utilities", 
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-stdin = "0.8"
hashbrown = "0.17"
indexmap = "2"
rand = "0.10"
smallvec = { version = "1", features = ["union"] }
